@@ -215,6 +215,13 @@ list_keybinds::
 
 WARNING: Tabs within command parameters are not escaped!
 
+list_clients [*--tag=*'TAG'|*--monitor=*'MONITOR'] [*--frame=*'FRAME_PATH'|*--floating*|*--tiling*] [*--title*]::
+    Lists the window ids of all clients on the given 'TAG' or 'MONITOR' (or the
+    current if unspecified). In addition to that, one can restrict to clients in
+    a specific frame (*--frame=*) or to tiled or floated clients.
+    The output is one line per client; if *--title* is given, then in addition
+    to every client's window id, its window title is printed in the same line.
+
 lock::
     Increases the 'monitors_locked' setting. Use this if you want to do multiple
     window actions at once (i.e. without repainting between the single steps).
